refactor: 선수 기록 조회를 QueryDSL 동적 쿼리로 개선
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>